--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <span
                   class="dapp-core-component__scamPhishingStyles__scam-phishing-alert-prefix"
                 >
-                  <strong>https://</strong>multiversxnodes.web.app/
+                  <strong>https://</strong>multiversxnodehubs.com
                 </span>
               </span>
             </p>
