--- a/unlock.html
+++ b/unlock.html
@@ -106,7 +106,7 @@
                     <div class="another1">
                       <p class="muted mb-3">Do not have a wallet</p>
                       <p class="mb-3">Get the xPortal mobile app</p>
-                      <button class="butt">Downlad now</button>
+                      <button class="butt">Download now</button>
                     </div>
                     <div class="another2">
                       <img src="down.png" class="down" />
